BACKPORT: anv: Disable aux if the explicit modifier lacks it

For dmabuf imports, configure the primary surface without support for
compression if the modifier doesn't specify it. This helps to create VkImages
with memory requirements that are compatible with the buffers apps provide.

Suggested-by: Philip Langdale <philipl@overt.org>
Cc: 22.0 <mesa-stable>
Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/5940
Tested-by: Philip Langdale <philipl@overt.org>
Reviewed-by: Tapani Pälli <tapani.palli@intel.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/15181>
(cherry picked from commit c1a7d520f3ffe720dfb949ee651d7299167a2924)

BUG=b:210276702
TEST=android.graphics.cts.MediaVulkanGpuTest#testMediaImportAndRendering

Change-Id: I45ad082c18984853a6fc4e0e0becde7268caea91
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/mesa/+/3499338
Reviewed-by: Yiwei Zhang <zzyiwei@chromium.org>
Tested-by: Chia-I Wu <olv@google.com>
Reviewed-by: Brian Ho <hob@chromium.org>
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Commit-Queue: Chia-I Wu <olv@google.com>